# IVI_System_Automotive_Embedded

ECU_Simulator/: ECU_Simulator.uvguix.Admin  ECU_Simulator.uvoptx  ECU_Simulator.uvprojx  main.c
ECU_Simulator/Listings/: Node2_MCP2515.map  startup_stm32f10x_md.lst
ECU_Simulator/Objects/: Node2_MCP2515.axf  Node2_MCP2515.build_log.htm  Node2_MCP2515.htm  Node2_MCP2515.lnp  Node2_MCP2515_Target 1.dep  main.crf  main.d  mcp2515.crf  mcp2515.d  misc.crf  misc.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_dma.crf  stm32f10x_dma.d  stm32f10x_exti.crf  stm32f10x_exti.d  stm32f10x_gpio.crf  stm32f10x_gpio.d  stm32f10x_rcc.crf  stm32f10x_rcc.d  stm32f10x_spi.crf  stm32f10x_spi.d  stm32f10x_tim.crf  stm32f10x_tim.d  stm32f10x_usart.crf  stm32f10x_usart.d  system_stm32f10x.crf  system_stm32f10x.d
ECU_Simulator/RTE/_Target_1/: RTE_Components.h
IVI_Core/: CMakeLists.txt  Main.qml  main.cpp  mockcanreceiver.cpp  mockcanreceiver.h  realcanreceiver.cpp  realcanreceiver.h  vehicledatacontroller.cpp  vehicledatacontroller.h
IVI_Positioning/: IVI_GPS.ino
