cmake_minimum_required(VERSION 3.16)

project(ClusterClient VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


find_package(Qt6 REQUIRED COMPONENTS
    Core
    Gui
    Qml
    Quick
    SerialPort  
    Positioning  
    Location     
    Network     
    SerialBus
    Multimedia
)


qt_standard_project_setup(REQUIRES 6.8)


qt_add_executable(appClusterClient
    main.cpp
    vehicledatacontroller.cpp
    vehicledatacontroller.h
    realcanreceiver.cpp
    realcanreceiver.h
    mockcanreceiver.cpp
    mockcanreceiver.h
)


qt_add_qml_module(appClusterClient
    URI ClusterClient
    VERSION 1.0
    QML_FILES Main.qml
    RESOURCES assets/VF8.png
)


target_link_libraries(appClusterClient PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Qml
    Qt6::Quick
    Qt6::SerialPort
    Qt6::Positioning
    Qt6::Location
    Qt6::Network
    Qt6::SerialBus
    Qt6::Multimedia
)

set_target_properties(appClusterClient PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
